--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,12 @@ version = "0.1.0"
 authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 glutin = "0.22.0-alpha1"
 winit = "0.19"
 takeable-option = "0.4"
 image = "0.21"
+cgmath = "0.17.0"
 
 [build-dependencies]
 gl_generator = "0.11"
