--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ winit = "0.19"
 takeable-option = "0.4"
 image = "0.21"
 cgmath = "0.17.0"
+rand = "0.7.0"
 
 [build-dependencies]
 gl_generator = "0.11"
